fix(article) v0.0.14-snapshot reformated direcciones-envio.html CHANGES

--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -122,9 +122,10 @@
             var idArticle = $("body").attr("data-id-article");
 
             for(var i = 0 ; i < propietats.length ; i++) {
+                if (propietats[i]){
 
+                }
             }
-
         }
     });
 </script>
