fix(article) v0.0.15 changes visually front

--- a/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
+++ b/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
@@ -224,7 +224,7 @@
                     "<div class='mt-2 mb-2 col-12'>" +
                     "</div>" +
                     "<div class='col-12 justify-content-around d-flex'>" +
-                    "<button type='button' class='btn btn-pc-economic-dark mt-3' data-bs-toggle='modal' data-bs-target='#exampleModal'>Añadir direccion</button>" +
+                    "<button type='button' class='btn btn-pc-economic-default mt-3' data-bs-toggle='modal' data-bs-target='#exampleModal'>Añadir direccion</button>" +
                     "<button type='submit' class='btn btn-pc-economic-dark mt-3' id='enviar'>Seleccionar dirección</button>" +
                     "</div>" +
                     "</form>" +
