--- a/public/PCEconomic/src/main/resources/templates/areaclients.html
+++ b/public/PCEconomic/src/main/resources/templates/areaclients.html
@@ -205,7 +205,13 @@
                                         <p>Pulse aqui si le interesa añadir alguna!</p>
 
                                         <ul class="list-group list-group-flush">
-                                            <li th:each="direccio : ${user.persona.direccions}" class="list-group-item" th:text="${direccio.streetandnumber} + ', ' + ${direccio.postalCode} + ', ' + ${direccio.country} + ', ' + ${direccio.province} + ', ' + ${direccio.city}"></li>
+                                            <li th:each="direccio : ${user.persona.direccions}" class="list-group-item">
+                                                <span th:text="${direccio.streetandnumber} + ', ' + ${direccio.postalCode} + ', ' + ${direccio.country} + ', ' + ${direccio.province} + ', ' + ${direccio.city}"></span>
+                                                <a th:href="@{/areaclients/deleteDirection/{id}(id=${direccio.id})}">
+                                                    <i class="bi bi-trash3"></i>
+                                                </a>
+
+                                            </li>
                                         </ul>
 
                                         <button type="button" class="w-25 btn btn-pc-economic-dark" data-bs-toggle="modal"
